# task

./: .gitignore  CMakeLists.txt  CMakePresets.json  project.cmake
include/task/: BinarySemaphore.cpp  BinarySemaphore.h  Critical.cpp  Critical.h  Mutex.cpp  Mutex.h  Task.cpp  Task.h  TaskDelayer.cpp  TaskDelayer.h  dependencies.h  di.cpp  di.h
private_src/: BaseSemaphore.cpp  BaseSemaphore.h  BinarySemaphore.cpp  BinarySemaphore.h  DisposableSemaphore.cpp  DisposableSemaphore.h  FreeTask.cpp  FreeTask.h  Mutex.cpp  Mutex.h  TaskDelayer.cpp  TaskDelayer.h  TaskManager.cpp  TaskManager.h  base_semaphore_handle.cpp  base_semaphore_handle.h  binary_semaphore_handle.cpp  binary_semaphore_handle.h  delay.cpp  mutex_handle.cpp  task.cpp
private_src/di/: CreateSemaphore.cpp  DICreate_BinarySemaphore.cpp  DICreate_Mutex.cpp  DI_Delayer.cpp  DI_ITaskManager.cpp
